feat: implement auth, init logger
