# doc/api.yaml
@@ -106,7 +106,89 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Track'
+  responses:
+    UnauthorizedError:
+      description: Access token is missing or invalid
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+security:
+- bearerAuth: []
 paths:
+  /login:
+    post:
+      tags:
+        - Login
+      security: []
+      summary: Login
+      description: Logins a user and returns a JWT-token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                login:
+                  type: string
+                  description: Username
+                password:
+                  type: string
+                  description: Password
+              required:
+                - user
+                - login
+      responses:
+        200:
+          description: Successful login.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                description: JWT Token
+        403:
+          description: Incorrect login or password
+  /signup:
+    post:
+      tags:
+        - Signup
+      security: [ ]
+      summary: Signup
+      description: Signup a user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                login:
+                  type: string
+                  minLength: 3
+                  maxLength: 255
+                  description: Username
+                password:
+                  type: string
+                  format: password
+                  pattern: ^[a-zA-Z0-9]{3,30}
+                  description: Password
+              required:
+                - login
+                - password
+      responses:
+        204:
+          description: Successful signup
+        400:
+          description: Bad request
+        409:
+          description: Conflict. Login already exists
   /user:
     get:
       tags:
@@ -122,6 +204,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Users
@@ -153,6 +237,8 @@ paths:
                 $ref: '#/components/schemas/User'
         400:
           description: Bad request. body does not contain required fields
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /user/{userId}:
     parameters:
       - name: userId
@@ -176,6 +262,8 @@ paths:
           description: Bad request. userId is invalid (not uuid)
         404:
           description: User not found
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     put:
       tags:
         - Users
@@ -228,7 +316,8 @@ paths:
           description: oldPassword is wrong
         404:
           description: User not found
-
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     delete:
       tags:
         - Users
@@ -241,6 +330,8 @@ paths:
           description: Bad request. userId is invalid (not uuid)
         404:
           description: User not found
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /track:
     get:
       tags:
@@ -256,6 +347,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Track'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Track
@@ -291,6 +384,8 @@ paths:
                 $ref: '#/components/schemas/Track'
         400:
           description: Bad request. body does not contain required fields
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /track/{id}:
     parameters:
       - name: id
@@ -315,6 +410,8 @@ paths:
           description: Bad request. trackId is invalid (not uuid)
         404:
           description: Track was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     put:
       tags:
         - Track
@@ -377,6 +474,8 @@ paths:
           description: Bad request. trackId is invalid (not uuid)
         404:
           description: Track was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     delete:
       tags:
         - Track
@@ -389,6 +488,8 @@ paths:
           description: Bad request. trackId is invalid (not uuid)
         404:
           description: Track was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /album:
     get:
       tags:
@@ -404,6 +505,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Album'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Album
@@ -437,6 +540,8 @@ paths:
                 $ref: '#/components/schemas/Album'
         400:
           description: Bad request. body does not contain required fields
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /album/{id}:
     parameters:
       - name: id
@@ -461,6 +566,8 @@ paths:
           description: Bad request. albumId is invalid (not uuid)
         404:
           description: Album was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     put:
       tags:
         - Album
@@ -496,6 +603,8 @@ paths:
           description: Bad request. albumId is invalid (not uuid)
         404:
           description: Album was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     delete:
       tags:
         - Album
@@ -508,6 +617,8 @@ paths:
           description: Bad request. albumId is invalid (not uuid)
         404:
           description: Album was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /artist:
     get:
       tags:
@@ -523,6 +634,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Artist'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Artist
@@ -551,6 +664,8 @@ paths:
                 $ref: '#/components/schemas/Artist'
         400:
           description: Bad request. body does not contain required fields
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /artist/{id}:
     parameters:
       - name: id
@@ -575,6 +690,8 @@ paths:
           description: Bad request. artistId is invalid (not uuid)
         404:
           description: Artist was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     put:
       tags:
         - Artist
@@ -605,6 +722,8 @@ paths:
           description: Bad request. artistId is invalid (not uuid)
         404:
           description: Artist was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     delete:
       tags:
         - Artist
@@ -617,6 +736,8 @@ paths:
           description: Bad request. artistId is invalid (not uuid)
         404:
           description: Artist was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /favs:
     get:
       tags:
@@ -630,6 +751,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Favorites'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /favs/track/{id}:
     parameters:
       - name: id
@@ -650,6 +773,8 @@ paths:
           description: Bad. trackId is invalid (not uuid)
         422:
           description: Track with id doesn't exist.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     delete:
       tags:
         - Favorites
@@ -662,6 +787,8 @@ paths:
           description: Bad. trackId is invalid (not uuid)
         404:
           description: Track was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /favs/album/{id}:
     parameters:
       - name: id
@@ -682,6 +809,8 @@ paths:
           description: Bad. albumId is invalid (not uuid)
         422:
           description: Album with id doesn't exist.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     delete:
       tags:
         - Favorites
@@ -694,6 +823,8 @@ paths:
           description: Bad. albumId is invalid (not uuid)
         404:
           description: Album was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /favs/artist/{id}:
     parameters:
       - name: id
@@ -714,6 +845,8 @@ paths:
           description: Bad request. artistId is invalid (not uuid)
         422:
           description: Artist with id doesn't exist.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     delete:
       tags:
         - Favorites
@@ -726,3 +859,5 @@ paths:
           description: Bad request. artistId is invalid (not uuid)
         404:
           description: Artist was not found.
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
