# src/auth/auth.controller.ts
@@ -1,0 +1,30 @@
+import { Controller, Post, HttpCode, HttpStatus, Body } from '@nestjs/common';
+import { AuthService } from './auth.service';
+import { CreateUserDto } from 'src/user/dto/create-user.dto';
+import { UpdateAuthDto } from './dto/update-auth.dto';
+import { Public } from './public.decorator';
+
+@Controller('auth')
+export class AuthController {
+  constructor(private readonly authService: AuthService) {}
+
+  @Public()
+  @Post('signup')
+  @HttpCode(HttpStatus.CREATED)
+  async signup(@Body() createUserDto: CreateUserDto) {
+    return await this.authService.signup(createUserDto);
+  }
+
+  @Public()
+  @Post('login')
+  async login(@Body() createUserDto: CreateUserDto) {
+    return await this.authService.login(createUserDto);
+  }
+
+  @Public()
+  @Post('refresh')
+  @HttpCode(HttpStatus.OK)
+  async refresh(@Body() updateAuthDto: UpdateAuthDto) {
+    return await this.authService.refresh(updateAuthDto);
+  }
+}
